# streamdeck-haskell

./: flake.nix
.github/workflows/: ci.yml
rhine-streamdeck/: rhine-streamdeck.cabal
rhine-streamdeck/src/: Prelude.hs
rhine-streamdeck/src/FRP/StreamDeck/: ButtonEvents.hs  DisplayButtonEvents.hs  InputClock.hs  KnobEvents.hs  Layer.hs  StreamDeckMk2Clock.hs  StreamDeckPlusClock.hs
rhine-streamdeck/test/: Image.hs  Main.hs  Prelude.hs  StreamDeckMk2.hs  StreamDeckPlus.hs  Teletubbies.hs
streamdeck/: streamdeck.cabal
streamdeck/src/: Prelude.hs
streamdeck/src/Data/ByteString/: Extra.hs
streamdeck/src/System/Hardware/: StreamDeck.hs
streamdeck/src/System/Hardware/StreamDeck/: StreamDeckMk2.hs  StreamDeckPedal.hs  StreamDeckPlus.hs
